--- a/docs/style.css
+++ b/docs/style.css
@@ -8,15 +8,18 @@ h1 { font-size: 64px; color: #000; text-align: center; margin: 0; }
 
 p { text-align: center; font-size: 18px; color: #777; }
 
-button { border: 2px solid #000; padding: 10px 20px; margin: 30px auto; display: block; font-size: 24px; }
+button { border: 2px solid #000; padding: 10px 20px; margin: 30px auto; display: block; font-size: 24px; background-color: #fff; }
 
-button:hover { background-color: #000; }
-button:hover a { color: #fff; }
+button:hover { background-color: #000; cursor: pointer; color: #fff; }
 button:active { transform: scale(0.9); }
 
 a { color: #000; text-decoration: none; font-weight: 600; }
 
 h2 { text-align: center; margin-bottom: 50px; }
+
+.progress-bars {
+    margin-bottom: 300px;
+}
 
 .progress-bar {
     width: 600px;
