--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,7 @@ h1 { font-size: 64px; color: #000; text-align: center; margin: 0; }
 
 p { text-align: center; font-size: 18px; color: #777; }
 
-button { border: 2px solid #000; padding: 10px 20px; margin: 30px auto; display: block; font-size: 24px; background-color: #fff; }
+button { border: 2px solid #000; padding: 10px 20px; margin: 30px auto; display: block; font-size: 24px; background-color: #fff; transition: all 0.05s linear }
 
 button:hover { background-color: #000; cursor: pointer; color: #fff; }
 button:active { transform: scale(0.9); }
@@ -33,9 +33,12 @@ h2 { text-align: center; margin-bottom: 50px; }
 .progress-value {
     width: 0%;
     height: 100%;
-    background-color: #5bc25d;
     transition: all 1s ease-in-out;
     border-radius: 10px 0 0 10px;
     border: 0;
     font-size: 0;
 }
+
+.progress-bar:nth-child(2) .progress-value { background-color: #ff4141; }
+.progress-bar:nth-child(3) .progress-value { background-color: #1c8eff; }
+.progress-bar:nth-child(4) .progress-value { background-color: #37c64d; }
